--- a/snap/hooks/install
+++ b/snap/hooks/install
@@ -1,6 +1,15 @@
 #! /bin/bash
 
-export PATH="$SNAP/bin:$SNAP/usr/bin:$PATH"
+declare -rA ARCH=([amd64]="x86_64" [arm64]="aarch64")
+
+export PATH="$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH"
+export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/${ARCH[$SNAP_ARCH]}-linux-gnu:$SNAP/usr/lib/${ARCH[$SNAP_ARCH]}-linux-gnu"
+export LD_LIBRARY_PATH="$SNAP_LIBRARY_PATH:$LD_LIBRARY_PATH"
+
+readonly MAX_MONGOD_START_WAIT_SECONDS=1
+readonly MAX_MONGOD_START_RETRY_COUNT=30
+readonly MAX_MONGOD_PRIMARY_WAIT_SECONDS=5
+readonly MAX_MONGOD_PRIMARY_RETRY_COUNT=10
 
 error() {
   printf "[ERROR] %s\n" "$*" >&2
@@ -10,87 +19,118 @@ error() {
 start_mongod() {
   mongod \
     --bind_ip=127.0.0.1 --port=27017 \
-    --smallfiles --dbpath=$SNAP_COMMON \
+    --dbpath=$SNAP_COMMON \
     --pidfilepath=$SNAP_COMMON/mongod.pid --journal \
     --replSet=rs0 \
-    --fork --syslog
+    --fork --syslog \
+    \
+    \
+    || error "mongo server start failed"
 }
 
 stop_mongod() {
-  mongod --dbpath=$SNAP_COMMON --shutdown
+  mongod --dbpath=$SNAP_COMMON --shutdown || error "mongo server shutdown failed"
 }
 
-_mongo() {
-  mongo --quiet --eval "$@"
+mongo() {
+  command mongo --quiet --eval "$1"
+}
+
+mongo_with_error_check() {
+  # 1: command 2: errormsg
+  local output=$(mongo "$1")
+  (( $(jq -r .ok <<< $output) == 1 )) && return
+  jq -r .errmsg <<< $output >&2
+  error ${2?"$1" command failed}
 }
 
 is_mongo_ready() {
-  test "$(_mongo 'db.adminCommand({ ping: 1 }).ok' admin)" = 1
+  for _ in $(seq 0 $MAX_MONGOD_START_RETRY_COUNT); do
+    (( $(mongo 'db.adminCommand({ ping: 1 }).ok') == 1 )) && return
+    sleep $MAX_MONGOD_START_WAIT_SECONDS
+  done
+  error "mongod server start wait timed out"
 }
 
-initiate_replicaset() {
-  local cmd
-
-  read -rd '' cmd <<EOF
-if (!db.isMaster().ismaster) {
-  rs.initiate(
-    {
-      _id: "rs0",
-      members: [
+init_replicaset() {
+  mongo_with_error_check '
+    JSON.stringify(
+      rs.initiate(
         {
-          _id: 0,
-          host: "localhost:27017"
+          _id: "rs0",
+          members: [
+            {
+              _id: 0,
+              host: "localhost:27017"
+            }
+          ]
         }
-      ]
-    }
-  ).ok;
+      )
+    )' "replicaset initialization failed"
 }
-EOF
 
-  if is_mongo_ready; then
-    rs=$(_mongo "$cmd")
-    test ${rs:-0} -eq 1
-  else
-    error "mongo started but still isn't ready for connections"
-  fi
+is_primary() {
+  for _ in $(seq 0 $MAX_MONGOD_PRIMARY_RETRY_COUNT); do
+    [[ $(mongo 'db.hello().isWritablePrimary') == "true" ]] && return
+    sleep $MAX_MONGOD_PRIMARY_WAIT_SECONDS
+  done
+  error "primary selection wait timed out"
 }
 
 init_mongod_conf() {
   cat >$SNAP_DATA/mongod.conf <<EOF
-# for documentation of all options, see:
+
+# For documentation of all options, see:
 #   http://docs.mongodb.org/manual/reference/configuration-options/
 
+# processManagement::fork and systemlog::* are ignored
 
-################################################################
-# THE FOLLOWING SETTINGS ARE GOING TO BE OVERRIDEN BY THIS SNAP
-# storage
-# systemLog
-# net
-################################################################
+net:
+  bindIp: 127.0.0.1
+  port: 27017
 
+setParameter:
+  enableLocalhostAuthBypass: false
 
-# how the process runs
-processManagement:
-  timeZoneInfo: /usr/share/zoneinfo
+storage:
+  dbPath: $SNAP_COMMON
+  journal:
+    enabled: true
+
+systemLog:
+  destination: syslog
+
+replication:
+  replSetName: rs0
 
 EOF
 }
 
+init_mongod_feature_compatibility_version() {
+  mongo_with_error_check 'JSON.stringify(db.adminCommand({ setFeatureCompatibilityVersion: "4.2" }))'
+}
+
+init_caddy_conf() {
+  touch $SNAP_DATA/Caddyfile
+}
+
 init_default_snap_configurations() {
-  snapctl set port=3001
+  snapctl set port=3000
   snapctl set mongo-url=mongodb://localhost:27017/parties
   snapctl set mongo-oplog-url=mongodb://localhost:27017/local
-  snapctl set snap-refreshing=false
-  snapctl set siteurl=http://localhost:3001
-  snapctl set db-feature-compatibility-version=3.6
+  snapctl set siteurl=http://localhost:3000
   snapctl set backup-on-refresh=disable
 }
 
 main() {
-  start_mongod || error "mongo server start failed"
-  initiate_replicaset || error "replicaset initiation failed"
-  stop_mongod || error "mongo server shutdown failed"
+  start_mongod
+  is_mongo_ready
+  init_replicaset
+  is_primary
+  init_mongod_feature_compatibility_version
+  stop_mongod
   init_mongod_conf
+  init_caddy_conf
   init_default_snap_configurations
 }
 
